[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = "1.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
chrono = "0.4.23"
email_address = "0.2.4"
serde = "1.0.152"
passwords = { version = "3.1.12", features = ["crypto", "common-password"]}
serde_json = "1.0.93"
async-trait = "0.1.64"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
futures = "0.3.27"
futures-util = "0.3.27"
